@@ -1,3 +1,14 @@
+2004-05-27  Jody Goldberg <jody@gnome.org>
+
+	* gnomecc-rounded-rect.c : new canvas item to match nautilus.
+
+	* control-center.c (setup_entry) : add proper focus handling
+
+2004-05-26  Jody Goldberg <jody@gnome.org>
+
+	* control-center.c (single_click_activates) : support nautilus' single
+	  click policy.
+
 2004-05-18  Jody Goldberg <jody@gnome.org>
 
 	* control-center.c (select_entry) : Ensure that the selected
